JSR 292: crash while throwing WrongMethodTypeException

XMLWordPrintable

    • b16
    • x86
    • solaris_10

        % /tmp/i586/jdk1.7.0/bin/java -server -XX:MaxInlineSize=150 -XX:InlineSmallCode=3000 -Xbootclasspath/p:/export/ws/7045514/meth.jar -Xbootclasspath/a:jruby.jar -Djruby.native.enabled=false org.jruby.Main -X+C --1.9 bench_etl.rb
        VM option 'MaxInlineSize=150'
        VM option 'InlineSmallCode=3000'
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/frame.cpp:394
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/tmp/jprt/P1/B/172205.never/source/src/share/vm/runtime/frame.cpp:394), pid=21603, tid=2
        # assert(is_interpreted_frame()) failed: interpreted frame expected
        #
        # JRE version: 7.0-b145
        # Java VM: Java HotSpot(TM) Server VM (21.0-b14-internal-201106151722.never.main_to_comp-fastdebug mixed mode solaris-x86 )
        # Core dump written. Default location: /never/tmp/indy-crasher/core or core.21603
        #
        # An error report file with more information is saved as:
        # /never/tmp/indy-crasher/hs_err_pid21603.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #
        Current thread is 2
        Dumping core ...

        This also seems to be the cause of the following crash seen with the jck tests:

        [Enter:vm.classfmt.atr.atrbsm002.atrbsm00201m1.atrbsm00201m1]
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0xfe0d37f7, pid=15854, tid=11
        #
        # JRE version: 7.0-b145
        # Java VM: Java HotSpot(TM) Server VM (21.0-b14-internal-201106151722.never.main_to_comp compiled mode solaris-x86 )
        # Problematic frame:
        # V [libjvm.so+0xd37f7] void objArrayKlass::oop_follow_contents(oopDesc*)+0x1c7
        #
        # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # An error report file with more information is saved as:
        # /export/ws/7045514/work/hs_err_pid15854.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #
        Abort

              Assignee:
              Tom Rodriguez
              Reporter:
              Tom Rodriguez
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: